fix getting active auctions + add new method for getting auction by id